<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/ActivityDetailBase.TextViewBase"
                android:text="@string/name" />

            <EditText
                android:id="@+id/name_et"
                style="@style/ActivityDetailBase"
                android:inputType="text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/ActivityDetailBase.TextViewBase"
                android:text="@string/quantity" />

            <EditText
                android:id="@+id/quantity_et"
                style="@style/ActivityDetailBase"
                android:inputType="number" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/ActivityDetailBase.TextViewBase"
                android:text="@string/price" />

            <EditText
                android:id="@+id/price_et"
                style="@style/ActivityDetailBase"
                android:inputType="numberDecimal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/ActivityDetailBase.TextViewBase"
                android:text="@string/color" />

            <Spinner
                android:id="@+id/color_sp"
                style="@style/ActivityDetailBase" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/ActivityDetailBase.TextViewBase"
                android:text="@string/supplier" />

            <EditText
                android:id="@+id/supplier_name_et"
                style="@style/ActivityDetailBase"
                android:inputType="text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/ActivityDetailBase.TextViewBase"
                android:text="@string/supplier_phone" />

            <EditText
                android:id="@+id/supplier_et"
                style="@style/ActivityDetailBase"
                android:inputType="phone" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/ActivityDetailBase.TextViewBase"
                android:text="@string/image" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:gravity="center">

                <Button
                    android:id="@+id/image_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/take_image" />

                <ImageView
                    android:id="@+id/image_iv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="gone"
                    tools:src="@mipmap/ic_launcher" />

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>
</ScrollView>