<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center">

    <TextView
        android:id="@+id/modify_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_margin="8dp"
        android:textSize="15sp"
        android:text="@string/app_name"/>

    <EditText
        android:id="@+id/modify_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_margin="8dp"
        android:textSize="15sp"
        android:inputType="number"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="8dp"
        android:textSize="15sp">

        <Button
            android:id="@+id/btn_increase"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_margin="8dp"
            android:text="@string/increase"/>

        <Button
            android:id="@+id/btn_decrease"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_margin="8dp"
            android:text="@string/decrease"/>

    </LinearLayout>


</LinearLayout>